Fix figure with caption vertical space and add simple alignwide support

--- a/resources/css/blocks/core/image.css
+++ b/resources/css/blocks/core/image.css
@@ -12,7 +12,14 @@
 	&.alignfull {
 		max-width: none;
 		figcaption {
-			margin-bottom: calc(var(--row) * -1);
+			@mixin container--page;
+		}
+
+		@media (--columns-8) {
+
+			img {
+				@mixin container--page;
+			}
 		}
 	}
 }
