--- a/resources/css/elements/media.css
+++ b/resources/css/elements/media.css
@@ -21,7 +21,9 @@ iframe {
 }
 
 figure {
-    margin: 0;
+    margin-top: 0;
+    margin-left: 0;
+    margin-right: 0;
 }
 
 figure img {
